<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/egirl"
        android:layout_width="375dp"
        android:layout_height="466dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nomadscitytour"
        tools:layout_editor_absoluteX="68sp"
        tools:layout_editor_absoluteY="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/egirl"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="32dp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/Email"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mainButtonConfirm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/text_input_password"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/text_field_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainButtonConfirm"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="498dp" />

    <TextView
        android:id="@+id/textView_haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_forgotpassword"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="517dp" />


</androidx.constraintlayout.widget.ConstraintLayout>